--- a/Vclone/style.css
+++ b/Vclone/style.css
@@ -40,7 +40,7 @@ body {
 
 nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   padding: 10px 20px;
