--- a/Vclone/style.css
+++ b/Vclone/style.css
@@ -84,8 +84,18 @@ nav ul li a:hover {
 }
 
 video {
+  position: absolute;
   width: 100%;
   height: auto;
+  /* top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: 0;
+  transform: translateX(-50%) translateY(-50%);
+  object-fit: contain; */
 }
 .viber-logo i {
   color: #fff;
@@ -134,4 +144,24 @@ video {
 
 .download-btn:hover {
   background-color: rgb(30, 154, 30);
+}
+
+.feature-title h2{ 
+  margin-top: 20%;
+  color: rgb(90, 64, 64);
+  text-align: center;
+  margin-bottom: 20px;
+  font-weight: 200;
+  font-size: 44px;
+}
+
+.feature-title p{
+  color:rgb(38, 32, 32);
+  text-align: center;
+  font-weight: 300;
+  font-size: 15px;
+}
+
+.nxt-page{
+
 }
