--- a/Vclone/style.css
+++ b/Vclone/style.css
@@ -4,39 +4,54 @@
   box-sizing: border-box;
 }
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #fff;
   overflow-x: hidden;
 }
-.poppins-light {
-  font-family: "Poppins", sans-serif;
+
+.roboto-thin {
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
+.roboto-thin-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-style: italic;
+}
+
+.roboto-light {
+  font-family: "Roboto", sans-serif;
   font-weight: 300;
   font-style: normal;
 }
 
-.poppins-regular {
-  font-family: "Poppins", sans-serif;
+.roboto-light-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.roboto-regular {
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
 
-.poppins-medium {
-  font-family: "Poppins", sans-serif;
+.roboto-regular-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.roboto-medium {
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-style: normal;
 }
 
-.poppins-bold {
-  font-family: "Poppins", sans-serif;
-  font-weight: 700;
-  font-style: normal;
-}
 
-.poppins-regular-italic {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-style: italic;
-}
 
 nav {
   display: flex;
@@ -87,16 +102,8 @@ video {
   position: absolute;
   width: 100%;
   height: auto;
-  /* top: 50%;
-  left: 50%;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  z-index: 0;
-  transform: translateX(-50%) translateY(-50%);
-  object-fit: contain; */
 }
+
 .viber-logo i {
   color: #fff;
   margin-bottom: 15px;
@@ -248,6 +255,7 @@ video {
   align-items: flex-end;
 }
 
+
 .mob-text h2{
   font-size: 44px;
   font-weight: 200;
@@ -285,7 +293,6 @@ video {
   max-width: 70%;
   height: auto;
   margin-left:150px;
-
 }
 
 .secure-head{
@@ -300,6 +307,11 @@ video {
 .secure-head h2{
   font-size: 44px;
   font-weight: 200;
+}
+
+.secure-head img{
+  vertical-align: middle;
+  padding: 10px;
 }
 
 .secure-head p{
@@ -323,4 +335,38 @@ video {
   background-color: #d4d2df;
 }
 
+.content-wrap{
+ text-align: center;
+ color: #323232; 
+ padding-top:100px;
+}
 
+.v-container img{
+  max-height: 80px;
+  vertical-align: middle;
+}
+
+.v-container h2{
+  color: black;
+  font-size: 20px;
+  padding: 20px 0;
+  font-size: 20px;
+  font-weight: 300;
+}
+
+.v-button button{
+  margin-top: 15px;
+  margin-bottom: 80px;
+  cursor: pointer;
+  font-size: 16px;
+  padding: 16px 60px;
+  border: none;
+  border-radius: 40px;
+  background-color: rgb(20, 224, 20);
+  color:#fff;
+} 
+
+
+.content-info{
+  background-color: #2596be;
+}
