--- a/style.css
+++ b/style.css
@@ -63,9 +63,19 @@ body {
 
 .main-body {
   display: flex;
-  justify-content: space-around;
+  justify-content:center;
+  column-gap: 100px;
   align-items: center;
+  margin-top: 100px;
 }
+
+.profile .henci{
+  object-fit: cover;
+  border-radius: 50%;
+  height: 300px;
+  width: 300px;
+}
+
 
 .body-container h1 {
   padding: 10px 0;
@@ -74,6 +84,31 @@ body {
 }
 
 .body-container p{
-    font-size: 18px;
-    font-weight: 200;
+  font-size: 18px;
+  font-weight: 200;
+  max-width: 330px;
+  padding-bottom: 30px;
+  font-size: 14px;
+}
+
+.info-1 h2{
+  font-size: 24px;
+  font-weight: 300;
+  padding-bottom: 10px;
+}
+
+.info-2 h2{
+  font-size: 24px;
+  font-weight: 300;
+  padding-bottom: 10px;
+}
+
+.info-1 p{
+  font-size: 14px;
+  font-weight: 200;
+}
+
+.info-2 p{
+  font-size: 14px;
+  font-weight: 200;
 }
