--- a/style.css
+++ b/style.css
@@ -67,6 +67,24 @@ body {
   padding: 10px 10px;
 }
 
+.nav-link-dropdown{
+  text-decoration: none;
+  color: #fff;
+  padding: 10px 10px;
+}
+
+/* .dropdown-content{
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+} */
+
+.nav-link-dropdown:hover{
+  padding: 10px 10px;
+  background-color:rgb(35, 35, 38);
+}
+
 .nav-link:hover{
   background-color:rgb(35, 35, 38);
   padding: 10px 10px;
