--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body {
   justify-content:center;
   column-gap: 100px;
   align-items: center;
-  margin-top: 100px;
+  margin-top: 150px;
 }
 
 .profile .henci{
@@ -152,13 +152,13 @@ body {
   padding-bottom: 100px;
 }
 
-.socials{
+#socials{
   text-align: center;
   justify-content: center;
   font-size: 30px;
   margin-top: 150px;
   display: flex;
-  column-gap: 60px;
+  column-gap: 100px;
 }
 
 .socials div a i{
