--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
   background-color: rgb(2, 12, 21);
   color: #fff;
   font-family: "Roboto", sans-serif;
-  /* cursor: url(images/cc.png), pointer; */
 }
 
 .roboto-thin {
@@ -54,12 +53,18 @@ body {
   align-items: center;
   justify-content: center;
   column-gap: 80px;
-  padding: 20px 0;
+  padding: 30px 0;
 }
 
-/* .nav-container{
-  background-color: rgb(27, 4, 48);
-} */
+.nav-container{
+  background-color: hsl(225, 48%, 8%);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 100%;
+  box-shadow: 0 4px 8px rgba(107, 77, 77, 0.2);
+} 
 
 .nav-link {
   text-decoration: none;
@@ -67,47 +72,48 @@ body {
   padding: 10px 10px;
 }
 
-.nav-link-dropdown{
-  text-decoration: none;
-  color: #fff;
-  padding: 10px 10px;
-}
-
-.nav-link-dropdown:hover{
-  padding: 10px 10px;
-  background-color:rgb(35, 35, 38);
-}
-
 .nav-link:hover{
-  background-color:rgb(35, 35, 38);
-  padding: 10px 10px;
+  background-color: hsl(224, 46%, 6%);
+  transition: 0.2s ease-in;
+  padding: 30px 10px;
 }
 
 .main-body {
   display: flex;
-  justify-content: space-evenly;
-  column-gap: 100px;
+  justify-content: center;
   align-items: center;
   margin-top: 150px;
-  margin-left: 150px;
 }
 
-.profile .henci{
-  object-fit: cover;
+.profile{
+  text-align: center;
+}
+
+.henci{
+  max-width: 20%;
   border-radius: 50%;
-  height: 300px;
-  width: 300px;
+  height: auto;
+  object-fit: cover;
+  margin-bottom: 20px;
 }
 
-.body-container{
-  margin-right: 50px;
+.profile h1{
+  font-size: 30px;
+  margin-bottom: 20px;
+  color: blueviolet;
+}
+
+.profile p{
+  font-size: 18px;
+  color: rgb(131, 131, 191);
 }
 
 .body-container h1 {
+  align-items: center;
   padding: 10px 0;
   font-size: 40px;
   font-weight: 300;
-  color: rgb(86, 61, 184);
+  color: rgb(16, 48, 175);
 }
 
 .body-container p{
@@ -116,37 +122,7 @@ body {
   padding-bottom: 30px;
   font-size: 18px;
   color: #fff;
-}
-
-/* .info-1 h3{
-  color: #fff;
-  font-weight: 300;
-  font-size: 16px;
-  padding-bottom: 10px;
-} */
-
-/* .info-2 h2{
-  font-weight: 200;
-  padding-bottom: 20px;
-} */
-
-/* .info-1 .p1{
-  font-size: 14px;
-  font-weight: 200;
-  line-height: 1.5rem;
-}
-
-.info-1 .p2{
-  font-size: 14px;
-  font-weight: 200;
-  line-height: 1.5rem;
-} */
-
-/* .info-2 p{
-  font-size: 14px;
-  font-weight: 200;
-  padding-bottom: 100px;
-} */
+} 
 
 #socials{
   text-align: center;
